feat: Remake the base layout and add new fonts and icons packs

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Conure</title>
   </head>
-  <body>
-    <div id="app" class="container-fluid"></div>
+  <body class="bg-gray-100">
+    <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
