feat: add new colors

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Conure</title>
   </head>
-  <body class="bg-gray-100">
+  <body class="bg-gray-100 dark:bg-body dark:text-white ">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
