feat: add dark mode styling

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Conure</title>
   </head>
-  <body class="bg-gray-100 dark:bg-body dark:text-white ">
+  <body class=" dark:bg-body bg-gray-100 dark:text-gray_1100 ">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
