feat: Experiment with different color styles in dark mode

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Conure</title>
   </head>
-  <body class=" dark:bg-body bg-gray-100 dark:text-gray-100 h-full">
+  <body class=" dark:bg-bgblue1 bg-gray-100 dark:text-gray-100 h-full">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
