--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" class="dark">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
+    />
     <title>Conure</title>
   </head>
-  <body class=" dark:bg-bgblue1 bg-gray-100 dark:text-gray-100 h-full">
+  <body class="dark:bg-bgblue1 bg-gray-100 dark:text-gray-100 h-full">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
