--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <title>Conure</title>
   </head>
-  <body class="dark:bg-bgblue1 bg-gray-100 dark:text-gray-100 h-full">
+  <body class="h-full">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
